2차 커밋(거의 최종)

--- a/hoduHTML.html
+++ b/hoduHTML.html
@@ -55,7 +55,7 @@
       </div>
     </div>
 
-    <div class="endlessPics">
+    <div class="endlessPics" id="endlessPics">
       <p><strong>dummy text of the printing and dummy</strong></p>
       <h4>Lorem Ipsum is simply <strong>dummy text</strong> of the printing and typesetting industry.</h4>
       <br>
@@ -72,8 +72,10 @@
           <img src="cat6.png" alt="cat6">
         </div>
       </div>
+
+      <ul class="show" id="show"></ul>
       <h3>Continue exploring HODU</h3>
-      <button>Show more</button>
+      <button id="showMore">Show more</button>
     </div>
 
     <div class="jb-division-line"></div>
@@ -105,7 +107,7 @@
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.<br>Lorem Ipsum has been the industry's standard dummy text </p>
       </div>
       <div class="email">
-        <input type="email" placeholder="enter your e-mail address" required>
+        <input type="email" placeholder="enter your e-mail address">
         <div class="subMail">
           <img src="mail.png" alt="email icon">
           <button>Subscribe</button>
@@ -132,7 +134,7 @@
         </div>
       </div>
     <div class="hover">
-      <button><img src="arrowUp.png" alt="up"></button>
+      <div style="cursor:pointer;" onclick="window.scrollTo(0,0);"><img src="arrowUp.png" alt="up"></div>
     </div>
     </footer>
 <!--footter 끝-->
